GroupPage: Add and fix Singles, show all the albums, implement the scrollbar, add style to the linkable single titles.

--- a/rockandif/src/Pages/AlbumPage.css
+++ b/rockandif/src/Pages/AlbumPage.css
@@ -74,8 +74,8 @@
 }
 
 #singlesAlbumItemLinked{
-    color: black;
-    text-decoration: none;
+    color: blue;
+    text-decoration: underline;
 }
 
 #singlesAlbumItemLinked:hover{
